#66147:[50cat] UndeclaredThrowableException when opening a project