@@ -13,6 +13,7 @@
 package org.netbeans.modules.java.j2seproject.classpath;
 
 import java.beans.PropertyChangeEvent;
+import java.io.File;
 import java.net.MalformedURLException;
 import java.util.List;
 import java.util.ArrayList;
@@ -25,6 +26,8 @@ import org.netbeans.spi.java.classpath.PathResourceImplementation;
 import org.netbeans.spi.java.classpath.support.ClassPathSupport;
 import org.netbeans.modules.java.j2seproject.SourceRoots;
 import org.netbeans.spi.project.support.ant.AntProjectHelper;
+import org.netbeans.spi.project.support.ant.PropertyEvaluator;
+import org.openide.ErrorManager;
 import org.openide.filesystems.FileObject;
 import org.openide.filesystems.FileStateInvalidException;
 import org.openide.util.Utilities;
@@ -35,10 +38,13 @@ import org.openide.util.Utilities;
  */
 final class SourcePathImplementation implements ClassPathImplementation, PropertyChangeListener {
 
-    private PropertyChangeSupport support = new PropertyChangeSupport(this);
+    private static final String PROP_BUILD_DIR = "build.dir";   //NOI18N
+    
+    private final PropertyChangeSupport support = new PropertyChangeSupport(this);
     private List resources;
-    private SourceRoots sourceRoots;
-    private AntProjectHelper projectHelper;
+    private final SourceRoots sourceRoots;
+    private final AntProjectHelper projectHelper;
+    private final PropertyEvaluator evaluator;
     
     /**
      * Construct the implementation.
@@ -47,6 +53,8 @@ final class SourcePathImplementation implements ClassPathImplementation, Propert
     public SourcePathImplementation(SourceRoots sourceRoots) {
         assert sourceRoots != null;
         this.sourceRoots = sourceRoots;
+        this.projectHelper = null;
+        this.evaluator = null;
         sourceRoots.addPropertyChangeListener (this);
     }
     
@@ -55,11 +63,13 @@ final class SourcePathImplementation implements ClassPathImplementation, Propert
      * @param sourceRoots used to get the roots information and events
      * @param projectHelper used to obtain the project root
      */
-    public SourcePathImplementation(SourceRoots sourceRoots, AntProjectHelper projectHelper) {
-        assert sourceRoots != null && projectHelper != null;
+    public SourcePathImplementation(SourceRoots sourceRoots, AntProjectHelper projectHelper, PropertyEvaluator evaluator) {
+        assert sourceRoots != null && projectHelper != null && evaluator != null;
         this.sourceRoots = sourceRoots;
         sourceRoots.addPropertyChangeListener (this);
         this.projectHelper = projectHelper;
+        this.evaluator = evaluator;
+        evaluator.addPropertyChangeListener (this);
     }
 
     public List /*<PathResourceImplementation>*/ getResources() {
@@ -79,11 +89,19 @@ final class SourcePathImplementation implements ClassPathImplementation, Propert
                 // adds build/generated/wsclient to resources to be available for code completion
                 if (projectHelper!=null) {
                     try {
-                        String rootURL = projectHelper.getProjectDirectory().getURL().toString();
-                        URL url = new URL(rootURL+"build/generated/wsclient/"); //NOI18N
-                        if (url!=null) result.add(ClassPathSupport.createResource(url));
+                        String buildDir = this.evaluator.getProperty(PROP_BUILD_DIR);
+                        if (buildDir != null) {
+                            File f =  new File (new File (this.projectHelper.resolveFile (buildDir),"generated"),"wsclient"); //NOI18N
+                            URL url = f.toURI().toURL();
+                            if (!f.exists()) {  //NOI18N
+                                assert !url.toExternalForm().endsWith("/");  //NOI18N
+                                url = new URL (url.toExternalForm()+'/');   //NOI18N
+                            }
+                            result.add(ClassPathSupport.createResource(url));
+                        }
                     } catch (MalformedURLException ex) {
-                    } catch (FileStateInvalidException ex){}
+                        ErrorManager.getDefault ().notify (ex);
+                    }
                 }
                 this.resources = Collections.unmodifiableList(result);
             }
@@ -108,6 +126,13 @@ final class SourcePathImplementation implements ClassPathImplementation, Propert
             }
             this.support.firePropertyChange (PROP_RESOURCES,null,null);
         }
-    }    
+        else if (this.evaluator != null && evt.getSource() == this.evaluator && 
+            (evt.getPropertyName() == null || PROP_BUILD_DIR.equals(evt.getPropertyName()))) {
+            synchronized (this) {
+                this.resources = null;
+            }
+            this.support.firePropertyChange (PROP_RESOURCES,null,null);
+        }
+    }
 
 }
